--- a/gestion-proyectos-frontend/package.json
+++ b/gestion-proyectos-frontend/package.json
@@ -8,9 +8,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bcrypt": "^5.1.1",
-    "gestion-proyectos-frontend": "file:",
+    "bootstrap": "^5.3.3",
     "graphql": "^16.9.0",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
